--- a/client/src/theme/customizations.css
+++ b/client/src/theme/customizations.css
@@ -20,3 +20,13 @@
         --min-width: 100vw;
     }
 }
+
+.fixHeight {
+    max-height: 80vh;
+    overflow: hidden;
+    height: 100%;
+}
+
+.scroll {
+    overflow-y: scroll;
+}
