--- a/client/src/theme/customizations.css
+++ b/client/src/theme/customizations.css
@@ -12,6 +12,10 @@
         --min-width: 500px;
         --max-width: 100vw
     }
+    .modal-width-50vw .modal-wrapper{
+        width: 50vw;
+        border-radius: 15px;
+    }
 }
 
 @media (orientation: portrait) {
@@ -22,6 +26,11 @@
 
     div.alert-wrapper {
         --min-width: 100vw;
+    }
+
+    .modal-width-50vw .modal-wrapper{
+        width: 90vw;
+        border-radius: 15px;
     }
 }
 
